- in option "-rotate" it is now possible to provide a file containing a rotation matrix.
- in option "-select", when selecting a 3-D shape from an STL file, rescaling is not automatic any more. It can be activated with keyword "scale" or "rescale" which preserves the aspect ratio of the 3-D model, or with keyword "fill" that deforms the 3-D model to fill the simulation cell.
- new function "IS_SELECTED" returns true if array SELECT is unallocated or if an atom is selected (false otherwise). This function is now used in most modes and options.
- enhanced writing of Quantum Espresso input files (*.pw), taking system information into account (e.g. if cell is cubic, ecutwfc and ecutrho read from UPF files, etc.). Note that the file produced is still just a draft and must be edited by user.
- option "-fix" renamed to "-freeze", now allows freezing multiple directions at once (xy, xz, yz, or xyz).
- fixed a bug that prevented reading some GULP results files (*.grs).
- fixed a bug that prevented reading some LAMMPS custom dump files (*.lmc), when forces were present.
- fixed a bug in mode "--polycrystal" that stopped the mode just after reading the seed.
- fixed a bug in option "-bind-shells" where, if no shell existed in the system, and if particles were close to one another, then particles detected as shells would be given the same position as their core. Thanks to Himal Wijekoon, ICAMS, Bochum University, Germany, for pointing out this bug.
- fixed a bug where option "-dislocation loop" would erase all auxiliary properties when introducing a prismatic dislocation loop where new atoms are added to the system. Thanks to Benedikt Eggle-Sievers, Max-Planck-Institut fuer Eisenforschung GmbH, Germany, for pointing out this bug.
- fixed a bug where Cartesian coordinates would sometimes be detected as reduced when the cell is very small. Thanks to Matous Mrovec, ICAMS, Bochum University, Germany, for pointing out this bug.