@@ -11,6 +11,7 @@ Master
 - in mode "--unwrap", a new auxiliary property "unwrapped_atom" is defined that is equal to 1 if an atom is unwrapped, and 0 otherwise.
 - in option "-rotate" it is now possible to provide a file containing a rotation matrix.
 - in option "-select", when selecting a 3-D shape from an STL file, rescaling is not automatic any more. It can be activated with keyword "scale" or "rescale" which preserves the aspect ratio of the 3-D model, or with keyword "fill" that deforms the 3-D model to fill the simulation cell.
+- in option "-wrap", fixed bug where number of atoms that were wrapped was not counted correctly.
 - new function "IS_SELECTED" returns true if array SELECT is unallocated or if an atom is selected (false otherwise). This function is now used in most modes and options.
 - enhanced writing of Quantum Espresso input files (*.pw), taking system information into account (e.g. if cell is cubic, ecutwfc and ecutrho read from UPF files, etc.). Note that the file produced is still just a draft and must be edited by user.
 - option "-fix" renamed to "-freeze", now allows freezing multiple directions at once (xy, xz, yz, or xyz).
